feat: 진단 퀴즈 추천 분기 노드 승인 플로우 및 UI 구현
- DiagnosisQuizService: 추천 노드를 CustomRoadmapNode에 직접 삽입 → RecommendationChange(SUGGESTED) 저장으로 변경
- RecommendationChange.branchFromNodeId 추가: 클리어한 원본 노드 ID 저장 (삽입 위치 + 분기 렌더링 위치 결정)
- addNodeToCustomRoadmap: branchFromNodeId 기준 customSortOrder 중간 삽입, isBranch/branchFromNodeId 함께 저장
- MyRoadmapDto.NodeItem: @JsonProperty("isBranch") 추가 (Jackson boolean is 접두사 제거 버그 방지)
- NodeClearance 연동: 노드 진행도 게이지를 lessonCompletionRate/requiredTagsSatisfied 기반으로 수정
- GhostBranchSection: 미승인 ADD 추천을 척추에서 수평 분기하는 풀사이즈 ghost 노드로 렌더링
- DiagnosisBranchSection: 승인된 분기 노드를 동일한 수평 분기 레이아웃 + 일반 node-box 크기로 렌더링
- 태그 시스템 및 data.sql 보강 (72개 태그, 17개 노드 매핑, NodeClearance 샘플 데이터)
- Gemini API 연동 (GeminiProvider, GeminiProperties)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>